--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <main>
             <h1>KINGSLEY ADEYI | WDD 130</h1>
             <img src="images/profile.webp" alt="Hello, my name is Kingsley Adeyi" width="200">
-            <p>Hello, my name is Kingsley Adeyi, I am from Nigeria and I live in Lagos Nigeria. 
-                I finished Pathway sometimes in 2018, but for some personal reasons I could not pursue a degree until now. 
-                I am very happy to take this course at this time, and am grateful to heavenly father for the opportunity</p>
+            <p>Hello, my name is Kingsley Adeyi, I am from Nigeria and I live in Lagos Nigeria.</p>
+            <p>I finished Pathway sometimes in 2018, but for some personal reasons I could not pursue a degree until now.</p>
+            <p>I am very happy to take this course at this time, and am grateful to heavenly father for the opportunity</p>
 
         </main>
         <footer>
