page updated with more info

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device,initial-scale=1.0">
         <title>Kingsley Adeyi | WDD 130 </title>
+        <meta name="description" content="This page is about Kingsley Adeyi' journey into the world of tech.">
+        <meta name="author" content="Kingsley Adeyi">
         <link rel="stylesheet" href="styles/styles.css" >
      </head>
      <body>
@@ -22,6 +24,15 @@
             <p>I am very happy to take this course at this time, and am grateful to heavenly father for the opportunity</p>
 
         </main>
+        <aside>
+            <h2>Lagos, Nigeria</h2>
+            <img src="images/lagosisland.jpg" alt="Lagos Island" width="200">
+            <img src="images/lagosisland2.jpg" alt="Lagos Island" width="200">
+            <img src="images/lagosmainland.jpg" alt="Lagos Mainland" width="200">
+            <p>Lagos is the commercial city of Nigeria. It has a population of over 15 million inhabitants.</p>
+            <p>It is the most populous and busiest city in Nigeria. It consist of two major parts, the Island and the Mainland.
+                I currently live in the mainland. </p>
+        </aside>
         <footer>
             <p>©2024 🌲 Kingsley Adeyi 🌲 Lagos, Nigeria</p>
 
