--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -6,17 +6,21 @@
     <title>wireframe Practice</title>
     <meta name="description" content="Kingsley Adeyi Practicing wireframe.">
     <meta name="author" content="Kingsley Adeyi">
+    <link rel="stylesheet" href="styles/wireframe.css" >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
         <div class="logo-box">
-            <img src="https://place-hold.it/75/75" alt="logo">
+            <img src="images/rafinglogo.png" alt="logo">
         </div>    
         <nav>
             <a href="#">Home</a>
-            <a href="#">Page 1</a>
-            <a href="#">Page 2</a>
-            <a href="#">Page 3</a>
+            <a href="#">About Us</a>
+            <a href="#">Trips</a>
+            <a href="#">Contact Us</a>
         </nav>
   </header>
   <main>
@@ -40,7 +44,7 @@
         <div id="product-gallery">
             <section class="product">
                 <img src="https://place-hold.it/250/250" alt="product image description">
-                <h2>Product 1 Title</h2>
+                <h1>Product 1 Title</h1>
                 <p>Product 1 Text Paragraph</p>
             </section>
             <section class="product">
@@ -50,33 +54,23 @@
             </section>
             <section class="product">
                 <img src="https://place-hold.it/250/250" alt="product image description">
-                <h2>Product 3 Title</h2>
+                <h3>Product 3 Title</h3>
                 <p>Product 3 Text Paragraph</p>
             </section>
             <section class="product">
                 <img src="https://place-hold.it/250/250" alt="product image description">
-                <h2>Product 4 Title</h2>
+                <h4>Product 4 Title</h4>
                 <p>Product 4 Text Paragraph</p>
             </section>
             <section class="product">
                 <img src="https://place-hold.it/250/250" alt="product image description">
-                <h2>Product 5 Title</h2>
+                <h5>Product 5 Title</h5>
                 <p>Product 5 Text Paragraph</p>
             </section>
             <section class="product">
                 <img src="https://place-hold.it/250/250" alt="product image description">
-                <h2>Product 6 Title</h2>
+                <h6>Product 6 Title</h6>
                 <p>Product 6 Text Paragraph</p>
-            </section>
-            <section class="product">
-                <img src="https://place-hold.it/250/250" alt="product image description">
-                <h2>Product 7 Title</h2>
-                <p>Product 7 Text Paragraph</p>
-            </section>
-            <section class="product">
-                <img src="https://place-hold.it/250/250" alt="product image description">
-                <h2>Product 8 Title</h2>
-                <p>Product 8 Text Paragraph</p>
             </section>
         </div>
   </main>
