--- a/wwr/about.html
+++ b/wwr/about.html
@@ -59,22 +59,24 @@
      </section>
      <section>
        <h2>Adventure Awaits You!</h2>
+       <div class="image-container">
        <img src="images/raft1.jpg" alt="Rafting Experience" width="200" height="200">
        <img src="images/raft2.jpg" alt="Rafting Experience" width="200" height="200">
        <img src="images/raft3.jpg" alt="Rafting Experience" width="200" height="200">
        <img src="images/raft4.jpg" alt="Rafting Experience" width="200" height="200">
        <img src="images/raft5.jpg" alt="Rafting Experience" width="200" height="200">
+      </div>
      </section>
     </main>
     <footer>
         <nav class="sociallinks">
-          <p>&#169; 2024 Supremo Rafting Adventures Inc,- Designed by Kingsley Adeyi</p>
-          <a href="https://web.facebook.com" target="_blank" style="display: flex; align-items: center;">
-            <img src="images/facebook-icon.png" alt="facebook" width="50" height="50" style="margin-right: 10px;">facebook</a>
-          <a href="https://web.instagram.com" target="_blank" style="display: flex; align-items: center;">
-            <img src="images/instagram-icon.png" alt="instagram" width="50" height="50" style="margin-right: 10px;">instagram</a>
-          <a href="https://web.twitter.com" target="_blank" style="display: flex; align-items: center;">
-            <img src="images/twitter-icon.png" alt="twitter" width="50" height="50" style="margin-right: 10px;">twitter</a>
+          <p>&#169; 2024 Supremo Rafting Adventures Inc, -Designed by Kingsley Adeyi</p>
+          <a href="https://web.facebook.com" target="_blank">
+            <img src="images/facebook-icon.png" alt="facebook" width="30px" height="30px"><span>Facebook</span></a>
+          <a href="https://web.instagram.com" target="_blank">
+            <img src="images/instagram-icon.png" alt="instagram" width="30px" height="30px"><span>Instagram</span></a>
+          <a href="https://web.twitter.com" target="_blank">
+            <img src="images/twitter-icon.png" alt="twitter" width="30px" height="30px"><span>Twitter</span></a>
         </nav>  
     </footer>  
 </body>
