--- a/wwr/about.html
+++ b/wwr/about.html
@@ -57,26 +57,41 @@
            with a reputation for safety, professionalism, and fun. The company continues to innovate and expand its services, 
            offering a range of rafting experiences for all skill levels and ages. </p>
      </section>
-     <section>
-       <h2>Adventure Awaits You!</h2>
-       <div class="image-container">
-       <img src="images/raft1.jpg" alt="Rafting Experience" width="200" height="200">
-       <img src="images/raft2.jpg" alt="Rafting Experience" width="200" height="200">
-       <img src="images/raft3.jpg" alt="Rafting Experience" width="200" height="200">
-       <img src="images/raft4.jpg" alt="Rafting Experience" width="200" height="200">
-       <img src="images/raft5.jpg" alt="Rafting Experience" width="200" height="200">
+     <section class="adventures">
+      <h2>Adventure Awaits You!</h2>
+      <div class="adventures-grid">
+      <figure>
+      <img src="images/raft1.jpg" alt="Adventure Image">
+      <figcaption>Against All Odds</figcaption>
+      </figure>
+      <figure>
+      <img src="images/raft2.jpg" alt="Adventure Image">
+      <figcaption>Big Mallard</figcaption>
+      </figure>
+      <figure>
+      <img src="images/raft3.jpg" alt="Adventure Image">
+      <figcaption>Half Day Adventure</figcaption>
+      </figure>
+      <figure>
+      <img src="images/raft4.jpg" alt="Adventure Image">
+      <figcaption>Río Apurímac</figcaption>
+      </figure>
+      <figure>
+      <img src="images/raft5.jpg" alt="Adventure Image">
+      <figcaption>Rainbow Day Adventure</figcaption>
+      </figure>
       </div>
-     </section>
+      </section>
     </main>
-    <footer>
+    <footer class="footer">
         <nav class="sociallinks">
           <p>&#169; 2024 Supremo Rafting Adventures Inc, -Designed by Kingsley Adeyi</p>
           <a href="https://web.facebook.com" target="_blank">
-            <img src="images/facebook-icon.png" alt="facebook" width="30px" height="30px"><span>Facebook</span></a>
+            <img src="images/facebook-icon.png" alt="facebook" width="30" height="30"><span>Facebook</span></a>
           <a href="https://web.instagram.com" target="_blank">
-            <img src="images/instagram-icon.png" alt="instagram" width="30px" height="30px"><span>Instagram</span></a>
+            <img src="images/instagram-icon.png" alt="instagram" width="30" height="30"><span>Instagram</span></a>
           <a href="https://web.twitter.com" target="_blank">
-            <img src="images/twitter-icon.png" alt="twitter" width="30px" height="30px"><span>Twitter</span></a>
+            <img src="images/twitter-icon.png" alt="twitter" width="30" height="30"><span>Twitter</span></a>
         </nav>  
     </footer>  
 </body>
