--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,85 +1,92 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Supremo Rafting Adventures</title>
-    <meta name="description" content="Get in touch with Supremo Rafting Adventures. Contact us for more information about our rafting services.">
-    <meta name="author" content="Kingsley Adeyi">
-    <link rel="stylesheet" href="styles/rafting.css" >
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
-    
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>Contact Us - Supremo Rafting Adventures</title>
+<meta name="description" content="Get in touch with Supremo Rafting Adventures for rafting services and adventures.">
+<meta name="author" content="Kingsley Adeyi">
+<link rel="stylesheet" href="styles/rafting.css" >
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="logo-box">
-            <img src="images/Supremologo.png" alt="logo">
-        </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
-        </nav>
-    </header>
-    <main>
-        <section class="hero">
-            <img src="images/contact-hero.jpg" alt="Contact Hero Image">
-        </section>
-        <section class="company-info">
-            <h2>Company Information</h2>
-            <p>Address: 123 Main St, Anytown, USA</p>
-            <p>Phone: 555-555-5555</p>
-            <p>Email: <a href="mailto:info@supremorafting.com">info@supremorafting.com</a></p>
-            <iframe src="(link unavailable)" width="600" height="450" frameborder="0" allowfullscreen></iframe>
-        </section>
-        <section class="employee-profiles">
-            <h2>Meet Our Team</h2>
-            <div class="employee-profile">
-                <img src="images/employee1.jpg" alt="Employee 1">
-                <h3>John Doe</h3>
-                <p>Guide and Instructor</p>
-            </div>
-            <div class="employee-profile">
-                <img src="images/employee2.jpg" alt="Employee 2">
-                <h3>Jane Smith</h3>
-                <p>Guide and Instructor</p>
-            </div>
-            <div class="employee-profile">
-                <img src="images/employee3.jpg" alt="Employee 3">
-                <h3>Bob Johnson</h3>
-                <p>Guide and Instructor</p>
-            </div>
-        </section>
-        <section class="contact-form">
-            <h2>Get in Touch</h2>
-            <form>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name"><br><br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email"><br><br>
-                <label for="purpose">Purpose:</label>
-                <input type="radio" id="general-inquiry" name="purpose" value="General Inquiry">
-                <label for="general-inquiry">General Inquiry</label>
-                <input type="radio" id="reservation-question" name="purpose" value="Reservation Question">
-                <label for="reservation-question">Reservation Question</label>
-                <input type="radio" id="website-suggestion" name="purpose" value="Website Suggestion">
-                <label for="website-suggestion">Website Suggestion</label><br><br>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message"></textarea><br><br>
-                <input type="checkbox" id="newsletter" name="newsletter" value="Subscribe to Newsletter">
-                <label for="newsletter">Subscribe to Newsletter</label><br><br>
-                <input type="submit" value="Submit">
-            </form>
-        </section>
-    </main>
-    <footer class="footer">
-        <nav class="sociallinks">
-            <p>&#169; 2024 Supremo Rafting Adventures Inc, -Designed by Kingsley Adeyi</p>
-            <a href="(link unavailable)" target="_blank"> 
-                <img src="images/facebook-icon.png" alt="facebook" width="30" height="30"><span>Facebook</span>
-            </a> 
-            <a href="(link unavailable)" target="_blank"> 
-                <img src="images/instagram-icon.png" alt="instagram" width="30" height
+<header>
+<div class="logo-box">
+<img src="images/Supremologo.png" alt="logo">
+</div>
+<nav>
+<a href="index.html">Home</a>
+<a href="about.html">About Us</a>
+<a href="trips.html">Trips</a>
+<a href="contact.html">Contact Us</a>
+</nav>
+</header>
+<main>
+<h1>Contact Us - Supremo Rafting Adventures</h1>
+<section class="hero">
+<img src="images/contactus1.webp" alt="Contact Hero Image">
+</section>
+<section class="company-info">
+<h2>Company Information</h2>
+<p>Address: 123 Main St, Anytown, USA</p>
+<p>Phone: 555-555-5555</p>
+<p>Email: <a href="mailto:info@supremorafting.com">info@supremorafting.com</a></p>
+<iframe src="(link unavailable)" width="600" height="450" frameborder="0" allowfullscreen></iframe>
+</section>
+<section class="employee-profiles">
+<h2>Meet Our Team</h2>
+<div class="employee-profile">
+<img src="images/profile.webp" alt="Employee 1" width="200" height="200">
+<h3>Kingsley Adeyi</h3>
+<p>Chief Operations Officer</p>
+</div>
+<div class="employee-profile">
+<img src="images/ifemidow.jpg" alt="Employee 2" width="200" height="200">
+<h3>Ifedioku Midow</h3>
+<p>Country Director</p>
+</div>
+<div class="employee-profile">
+<img src="images/bobsunn.webp" alt="Employee 3" width="200" height="200">
+<h3>Bob Sun</h3>
+<p>Guide and Instructor Manager</p>
+</div>
+</section>
+<section class="contact-form">
+<h2>Get in Touch</h2>
+<form>
+<label for="name">Name:</label>
+<input type="text" id="name" name="name">
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email">
+
+            <label for="purpose">Purpose:</label>
+            <input type="radio" id="general-inquiry" name="purpose" value="General Inquiry">
+            <label for="general-inquiry">General Inquiry</label>
+            <input type="radio" id="reservation-question" name="purpose" value="Reservation Question">
+            <label for="reservation-question">Reservation Question</label>
+            <input type="radio" id="website-suggestion" name="purpose" value="Website Suggestion">
+            <label for="website-suggestion">Website Suggestion</label>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message"></textarea>
+
+            <input type="checkbox" id="newsletter" name="newsletter" value="Subscribe to Newsletter">
+            <label for="newsletter">Subscribe to Newsletter</label>
+
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
+</main>
+<footer class="footer">
+    <nav class="sociallinks">
+        <p>&#169; 2024 Supremo Rafting Adventures Inc, -Designed by Kingsley Adeyi</p>
+        <a href="(link unavailable)" target="_blank">
+            <img src="images/facebook-icon.png" alt="facebook" width="30" height="30"><span>Facebook</span>
+        </a>
+        <a href="(link unavailable)" target="_blank">
+            <img src="images/instagram-icon.png" alt="instagram" width="30" height="30"><span>Instagram</span>
+        </a>
+        <a href="(link unavailable)" target="_
