--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -30,10 +30,10 @@
 </section>
 <section class="company-info">
 <h2>Company Information</h2>
-<p>Address: 123 Main St, Anytown, USA</p>
-<p>Phone: 555-555-5555</p>
+<p>Address: 123 Adeyi Drive, Ikeja, Lagos, </p>
+<p>Phone: 234-703-7400-828</p>
 <p>Email: <a href="mailto:info@supremorafting.com">info@supremorafting.com</a></p>
-<iframe src="(link unavailable)" width="600" height="450" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126846.01254231801!2d3.2811266978536695!3d6.529528755488379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9228fa2a3999%3A0xd7a8324bddbba1f0!2sIkeja%2C%20Lagos!5e0!3m2!1sen!2sng!4v1733414193015!5m2!1sen!2sng" width="600" height="450" frameborder="0" allowfullscreen></iframe>
 </section>
 <section class="employee-profiles">
 <h2>Meet Our Team</h2>
@@ -90,3 +90,6 @@
             <img src="images/instagram-icon.png" alt="instagram" width="30" height="30"><span>Instagram</span>
         </a>
         <a href="(link unavailable)" target="_
+</footer>
+</body>
+</html>        
