--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -7,9 +7,9 @@
 <meta name="description" content="Get in touch with Supremo Rafting Adventures for rafting services and adventures.">
 <meta name="author" content="Kingsley Adeyi">
 <link rel="stylesheet" href="styles/rafting.css" >
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
+<link rel="preconnect" href="(link unavailable)">
+<link rel="preconnect" href="(link unavailable)" crossorigin>
+<link href="(link unavailable)" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -30,10 +30,10 @@
 </section>
 <section class="company-info">
 <h2>Company Information</h2>
-<p>Address: 123 Adeyi Drive, Ikeja, Lagos, </p>
+<p>Address: 123 Supremo Drive, Lekki Phase 1, Lagos, Nigeria</p>
 <p>Phone: 234-703-7400-828</p>
 <p>Email: <a href="mailto:info@supremorafting.com">info@supremorafting.com</a></p>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126846.01254231801!2d3.2811266978536695!3d6.529528755488379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9228fa2a3999%3A0xd7a8324bddbba1f0!2sIkeja%2C%20Lagos!5e0!3m2!1sen!2sng!4v1733414193015!5m2!1sen!2sng" width="600" height="450" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253701.11806312355!2d3.6100797510140326!3d6.5115618911193165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf75df5c74367%3A0x6a7e7df9d6c1cd4a!2sLekki%2C%20Lagos!5e0!3m2!1sen!2sng!4v1733416602126!5m2!1sen!2sng" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
 <section class="employee-profiles">
 <h2>Meet Our Team</h2>
@@ -58,38 +58,30 @@
 <form>
 <label for="name">Name:</label>
 <input type="text" id="name" name="name">
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email">
-
-            <label for="purpose">Purpose:</label>
-            <input type="radio" id="general-inquiry" name="purpose" value="General Inquiry">
-            <label for="general-inquiry">General Inquiry</label>
-            <input type="radio" id="reservation-question" name="purpose" value="Reservation Question">
-            <label for="reservation-question">Reservation Question</label>
-            <input type="radio" id="website-suggestion" name="purpose" value="Website Suggestion">
-            <label for="website-suggestion">Website Suggestion</label>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message"></textarea>
-
-            <input type="checkbox" id="newsletter" name="newsletter" value="Subscribe to Newsletter">
-            <label for="newsletter">Subscribe to Newsletter</label>
-
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
+<label for="email">Email:</label>
+<input type="email" id="email" name="email">
+<label for="purpose">Purpose:</label>
+<input type="radio" id="general-inquiry" name="purpose" value="General Inquiry">
+<label for="general-inquiry">General Inquiry</label>
+<input type="radio" id="reservation-question" name="purpose" value="Reservation Question">
+<label for="reservation-question">Reservation Question</label>
+<input type="radio" id="website-suggestion" name="purpose" value="Website Suggestion">
+<label for="website-suggestion">Website Suggestion</label>
+<label for="message">Message:</label>
+<textarea id="message" name="message"></textarea>
+<input type="checkbox" id="newsletter" name="newsletter" value="Subscribe to Newsletter">
+<label for="newsletter">Subscribe to Newsletter</label>
+<button type="submit">Send Message</button>
+</form>
+</section>
 </main>
 <footer class="footer">
-    <nav class="sociallinks">
-        <p>&#169; 2024 Supremo Rafting Adventures Inc, -Designed by Kingsley Adeyi</p>
-        <a href="(link unavailable)" target="_blank">
-            <img src="images/facebook-icon.png" alt="facebook" width="30" height="30"><span>Facebook</span>
-        </a>
-        <a href="(link unavailable)" target="_blank">
-            <img src="images/instagram-icon.png" alt="instagram" width="30" height="30"><span>Instagram</span>
-        </a>
-        <a href="(link unavailable)" target="_
+  <nav class="sociallinks">
+  <p>&#169; 2024 Supremo Rafting Adventures Inc, -Designed by Kingsley Adeyi</p>
+  <a href="(link unavailable)" target="_blank">
+  <img src="images/facebook-icon.png" alt="facebook" width="30" height="30"><span>Facebook</span>
+  <img src="images/instagram-icon.png" alt="instagram" width="30" height="30"><span>Instagram</span>
+</nav>
 </footer>
 </body>
-</html>        
+</html>
