--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -7,9 +7,9 @@
 <meta name="description" content="Get in touch with Supremo Rafting Adventures for rafting services and adventures.">
 <meta name="author" content="Kingsley Adeyi">
 <link rel="stylesheet" href="styles/rafting.css" >
-<link rel="preconnect" href="(link unavailable)">
-<link rel="preconnect" href="(link unavailable)" crossorigin>
-<link href="(link unavailable)" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
