--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,7 +17,7 @@
 <img src="images/Supremologo.png" alt="logo">
 </div>
 <nav>
-<a href="index.html">Home</a>
+<a href="home.html">Home</a>
 <a href="about.html">About Us</a>
 <a href="trips.html">Trips</a>
 <a href="contact.html">Contact Us</a>
@@ -77,11 +77,20 @@
 </main>
 <footer class="footer">
   <nav class="sociallinks">
-  <p>&#169; 2024 Supremo Rafting Adventures Inc, -Designed by Kingsley Adeyi</p>
-  <a href="(link unavailable)" target="_blank">
-  <img src="images/facebook-icon.png" alt="facebook" width="30" height="30"><span>Facebook</span>
-  <img src="images/instagram-icon.png" alt="instagram" width="30" height="30"><span>Instagram</span>
-</nav>
+      <p>&#169; 2024 Supremo Rafting Adventures Inc. - Designed by Kingsley Adeyi</p>
+      <a href="https://web.facebook.com/kingsmidow" target="_blank">
+          <img src="images/facebook-icon.png" alt="facebook" width="30" height="30">
+          <span>Facebook</span>
+      </a>
+      <a href="(link unavailable)" target="_blank">
+          <img src="images/instagram-icon.png" alt="instagram" width="30" height="30">
+          <span>Instagram</span>
+      </a>
+      <a href="https://x.com/KingsMidow" target="_blank">
+          <img src="images/twitter-icon.png" alt="twitter" width="30" height="30">
+          <span>Twitter</span>
+      </a>
+  </nav>
 </footer>
 </body>
 </html>
