--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -96,7 +96,7 @@
                 <img src="images/twitter-icon.png" alt="twitter" width="30" height="30">
                 <span>Twitter</span>
             </a>
-            <a href="images/trips-wireframe.jpg" target="_blank">View Trips Page Wireframe</a>
+            <a href="https://app.moqups.com/42onQeUp7zp4qxI7jo43S0nNv9wQ6I5m/view/page/aef4b8283" target="_blank">View Trips Page Wireframe</a>
         </nav>
     </footer>
 </body>
