--- a/wwr/gallery.html
+++ b/wwr/gallery.html
@@ -1,13 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Supremo Rafting Adventure</title>
-    <meta name="description" content="Experience the thrill of whitewater rafting with Supremo Rafting Adventure">
+    <title>Experience the Thrill: Rafting Photo Gallery | Supremo Rafting Adventure</title>
+    <meta name="description" content="Explore our rafting photo gallery and experience the thrill of whitewater rafting with Supremo Rafting Adventure.">
     <meta name="author" content="Kingsley Adeyi">
-    <link rel="stylesheet" href="styles/rafting.css" >
+    <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Roboto&display=swap" rel="stylesheet">
@@ -28,35 +27,41 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/supremor1.jpg" alt="Supremo Adventure" width="700" height="500">
-            <h1>Experience the Thrill of Whitewater Rafting</h1>
-            <p>Join us for an unforgettable adventure on the river!</p>
-            <button>Book Your Trip Now!</button>
+            <h1>Experience the Thrill: Rafting Photo Gallery</h1>
+            <p>Explore our gallery and experience the thrill of whitewater rafting with Supremo Rafting Adventure.</p>
         </div>
-        <section class="featured-trips">
-            <h2>Featured Trips</h2>
-            <div class="trip-grid">
+        <section class="gallery">
+            <h2>Our Rafting Adventures</h2>
+            <div class="gallery-grid">
                 <figure>
-                    <img src="images/raft1.jpg" alt="Trip 1">
-                    <figcaption>Trip 1: Half Day Adventure</figcaption>
+                    <img src="images/raft101.jpg" alt="Gallery 1">
+                    <figcaption>Whitewater Rafting</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/raft2.jpg" alt="Trip 2">
-                    <figcaption>Trip 2: Full Day Excursion</figcaption>
+                    <img src="images/raft102.jpg" alt="Gallery 2">
+                    <figcaption>Family Fun on the River</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/raft3.jpg" alt="Trip 3">
-                    <figcaption>Trip 3: Multi-Day Expedition</figcaption>
+                    <img src="images/raft103.jpg" alt="Gallery 3">
+                    <figcaption>Thrilling Rapids and Scenic Views</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/raft104.jpg" alt="Gallery 3">
+                    <figcaption>Thrilling Rapids and Scenic Views</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/raft105.jpg" alt="Gallery 3">
+                    <figcaption>Funtation</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/raft106.jpg" alt="Gallery 3">
+                    <figcaption>Thrilling Time</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/raft107.jpg" alt="Gallery 3">
+                    <figcaption>Thrilling Fun</figcaption>
                 </figure>
             </div>
-        </section>
-        <section class="newsletter">
-            <h2>Stay Up-to-Date with Our Latest Adventures!</h2>
-            <form>
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
-                <button type="submit">Subscribe</button>
-            </form>
         </section>
     </main>
     <footer class="footer">
@@ -78,3 +83,4 @@
     </footer>
 </body>
 </html>
+
