--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,10 +17,12 @@
 <img src="images/Supremologo.png" alt="logo">
 </div>
 <nav>
-<a href="home.html">Home</a>
-<a href="about.html">About Us</a>
-<a href="trips.html">Trips</a>
-<a href="contact.html">Contact Us</a>
+    <a href="home.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="trips.html">Trips</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="faqs.html">FAQs</a>
+    <a href="contact.html">Contact Us</a>
 </nav>
 </header>
 <main>
