--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -21,6 +21,8 @@
             <a href="home.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="faqs.html">FAQs</a>
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
